--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,7 @@
   margin-left: 25%;
   display: flex;
   flex-direction: column;
+
   /* justify-content: center;
   align-items: center; */
 }
@@ -88,7 +89,7 @@
   font-weight: 60.51px;
 }
 
-#sub-title {
+#category-title {
   font-family: Gothic A1;
   color: #4F7476;
   font-size: 20px;
@@ -98,3 +99,14 @@
   letter-spacing: 0em;
   text-align: left;
 }
+
+#question {
+  display: flex;
+  flex-direction: column;
+}
+
+#questionContainerRow {
+  display: flex;
+  flex-direction: row;
+}
+
