--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-* {
-
-}
-
 .header-container {
   background-color: #FFDFB0;
 }
@@ -10,7 +6,7 @@
   position: relative;
   top: 200px;
   margin-left: 50%;
-  background-color: lightcyan;
+  /* background-color: lightcyan; */
   color: #0A3D3F;
   font-family: Inter;
   font-size: 64px;
@@ -27,6 +23,7 @@
   /* background-color: lightgrey; */
   position: relative;
   width: 50%;
+  height: 30%;
   bottom: 100px
 }
 
@@ -55,14 +52,16 @@
 #clock {
   position: absolute;
   z-index: 3;
-  left: 200px;
-  top: 40px;
+  left: 30%;
+  height: 35%;
+  top: 20%;
 }
 
 #chat_bubbles {
   position: absolute;
   z-index: 3;
-  right: 205px;
+  right: 30%;
+  height: 60%;
   bottom: 0px;
 }
 
@@ -75,18 +74,17 @@
   line-height: 29px;
   letter-spacing: 0.03em;
   text-align: left;
-
-  margin-left: 25%;
   display: flex;
   flex-direction: column;
 
-  /* justify-content: center;
-  align-items: center; */
+  justify-content: center;
+  align-items: center;
 }
 
 #questions-title {
   font-size: 50px;
   font-weight: 60.51px;
+  justify-content: center;
 }
 
 #category-title {
@@ -108,5 +106,19 @@
 #questionContainerRow {
   display: flex;
   flex-direction: row;
+}
+
+#question-div-flex {
+  flex-direction: column;
+  justify-content: center;
+}
+
+.FAQ-page {
+  min-width: 750px;
+}
+
+#questions-div-flex {
+  justify-content: center;
+  margin: 10px;
 }
 
